hphp/hack/test/typecheck/constraint_gen_fail2.php.exp
File "constraint_gen_fail2.php", line 21, characters 7-12:
Invalid argument (Typing[4323])
  File "constraint_gen_fail2.php", line 16, characters 14-14:
  `T` is a constrained type parameter
  File "constraint_gen_fail2.php", line 16, characters 19-19:
  This type constraint is violated
  File "constraint_gen_fail2.php", line 16, characters 19-19:
  Expected `A`
  File "constraint_gen_fail2.php", line 21, characters 7-12:
  But got `string`
